# squirrel-coffee

./: AstPrinter.cpp  AstPrinter.h  CMakeLists.txt  Class.h  CodeGenerator.cpp  CodeGenerator.h  Entry.h  Field.h  JSMOpps.h  LICENSE  Makefile  Method.h  Package.h  Parameter.h  README.md  Sample1.java  Sample1.jsm  Sample2.java  SemanticCheck.cpp  SemanticCheck.h  SemanticException.h  SymbolTable.cpp  SymbolTable.h  SymbolTableException.h  Variable.h  error.c  error.h  index.html  main_tjc.cpp  params.json  tjc.l  tjc.y
ast/: AssignStmt.cpp  AssignStmt.h  Ast.h  AstException.h  AstNode.cpp  AstNode.h  AstVisitor.h  BinaryExpression.cpp  BinaryExpression.h  BlockStmt.cpp  BlockStmt.h  CastExpression.cpp  CastExpression.h  ClassDeclaration.cpp  ClassDeclaration.h  Declaration.h  EmptyStmt.h  Expression.h  FieldDeclaration.h  ForStmt.cpp  ForStmt.h  IfStmt.cpp  IfStmt.h  LiteralExpression.h  Makefile  MethodCallExpression.cpp  MethodCallExpression.h  MethodCallStmt.h  MethodDeclaration.cpp  MethodDeclaration.h  NewExpression.h  ParameterDeclaration.h  ReferenceExpression.h  ReturnStmt.h  Statement.h  UnaryExpression.h  VariableDeclaration.h  WhileStmt.h
